# edesdetect

./: .gitignore  Pipfile  README.org  config_upstream.toml  eval.ipynb  pyproject.toml  setup.py  temp.py
apps/environment_visualizer/: README.org  app.html  main.py
apps/hyperparameter_optimization/: main.py
apps/performance_insight/: evaluate.py  events.py  layout.py  main.py  scores_preprocessor.py  util.py
apps/performance_insight/_layout/: plots.py  video.py
apps/video_visualizer/: bokvev_server.ipynb  index.html
docs/: binary_classification_environment.org
edesdetectrl/: config.py  evaluator.py  main.py  metrics.py  model.py  tracking.py  train.py  train_old.py
edesdetectrl/acme/: distributed_layout.py  environment_loop.py
edesdetectrl/acme_agents/: dqn.py  extensions.py
edesdetectrl/agents/: dqn.py
edesdetectrl/agents/dqn/: __init__.py  agent.py  builder.py  config.py  evaluator.py  foo.ipynb  learning.py  learning_lib.py  loggers.py  losses.py
edesdetectrl/agents/dqn2/: __init__.py  builder.py  config.py
edesdetectrl/core/: __init__.py  checkpointer.py  evaluator.py  metrics.py  stepper.py  timer.py  tracking.py  train_loop.py
edesdetectrl/dataloaders/: __init__.py  common.py  echonet.py  pipeline.py
edesdetectrl/dataloaders/echonet/: __init__.py  label_frames.py  tfdata.ipynb
edesdetectrl/dataloaders/echotiming/: __init__.py
edesdetectrl/environments/: __init__.py  base.py  binary_classification.py  mixins.py  rewards.py
edesdetectrl/environments/m_mode_binary_classification/: __init__.py  foo.ipynb  line.py  render.py
edesdetectrl/environments/vanilla_binary_classification/: __init__.py  render.py
edesdetectrl/nets/: __init__.py  base.py  m_mode.py
edesdetectrl/util/: async_buffered_generator.py  checkpoints.py  concurrent_pool.py  dm_env.py  echonet_data_massager.py  echonet_loader.py  functional.py  generators.py  gpu.py  mlflow.py  plot_animation.py  pytrees.py  sharp_jax.py
notebooks/: metrics.ipynb
notebooks/environments/: binary_classification.ipynb  binary_classification_rewards.ipynb
notebooks/environments/binary_classification/: true_q.ipynb
notebooks/plots/: echonet.ipynb
notebooks/plots/frequency_domain/: core.ipynb
scripts/: load_modules.sh  ssh_load_python3.8_on_start.sh  start_jupyter_lab_server.sh
supervised/: mobilenet.py
tests/: test_checkpoints.py
tests/edesdetectrl/: test_evaluator.py  test_metrics.py
tests/edesdetectrl/agents/: dqn.py
tests/edesdetectrl/core/: test_metrics.py  test_stepper.py
tests/edesdetectrl/environments/: test_base.py  test_binary_classification.py  test_init.py  test_rewards.py
tests/edesdetectrl/nets/: test_nets_base.py
tests/mocks/: agents.py  environments.py
thesis/: binary_classification_environment.org  final.org  main.bib  scratch.org  thesis.org  thesis_notes.org
thesis/graphs/: waves.ipynb
thesis/ifimaster/: uiomasterfp.sty
thesis/parts/: abstract.org  acoustic_imaging_physics_primer.org  datasets.org  experiments.org  introduction.org  methodology.org  previous_work.org  reinforcement_learning.org  rl_in_medical_imaging.org
(+23 files in other folders)
